# BDA-demo

./: .coverage  .dockerignore  .env.example  .gitignore  FRD01_前端设计说明.md  PRD01_完整产品需求文档.md  README.md  README.zh-CN.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pytest.ini
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  celery_app.py  config.py  db.py  logging_config.py  main.py  schemas.py  settings.py
backend/app/auth/: deps.py  service.py
backend/app/compute/: adapter.py  factory.py
backend/app/copilot/: biomaterials_skill.py  cluster.py  knowledge_defaults.py  provider.py  research.py  runtime.py  script_importer_bridge.py  service.py  tools.py
backend/app/db/: __init__.py  engine.py  pool.py
backend/cluster_wrappers/: __init__.py
backend/db/: schema.sql  schema_extended.sql  seed_demo.sql
backend/scripts/: import_manual_bda_knowledge.py  import_qm_scripts.py  init_db.py  register_plugins.py  register_sweet_protein_mpnn_results.py  seed_sweet_protein.py
backend/tests/: check_db.py  conftest.py  test_api.py  test_auth.py  test_campaigns.py  test_compute_e2e.py  test_copilot_provider.py  test_copilot_research.py  test_core_api.py  test_init_db_migrations.py  test_job_manifest.py  test_literature_ingestion.py  test_llm_planning_service.py  test_pdb_metadata.py  test_protein_comparison.py  test_remote_lsf_adapter.py  test_repositories.py  test_rfdiffusion_wrapper.py  test_route_planner.py  test_script_importer.py  test_services.py  test_sweet_protein_planner.py  test_workflow.py
(+413 files in other folders)
